--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = perl-CGI-Simple
-url = https://cpan.metacpan.org/authors/id/M/MA/MANWAR/CGI-Simple-1.16.tar.gz
+url = https://cpan.metacpan.org/authors/id/M/MA/MANWAR/CGI-Simple-1.17.tar.gz
 archives = 
 giturl = 
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
